--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -3,6 +3,7 @@
   https://github.com/HermanMartinus/bearblog/blob/297026a877bc2ab2b3bdfbd6b9f7961c350917dd/templates/styles/blog/default.css
   License MIT: https://github.com/HermanMartinus/bearblog/blob/master/LICENSE.md
  */
+@import "tailwindcss";
 
 :root {
     --accent: #000000;
@@ -44,7 +45,15 @@
     font-display: swap;
 }
 body {
-    font-family: "Dosis", system-ui, -apple-system, Segoe UI, Roboto, "Helvetica Neue", Arial, sans-serif;
+    font-family:
+        "Dosis",
+        system-ui,
+        -apple-system,
+        Segoe UI,
+        Roboto,
+        "Helvetica Neue",
+        Arial,
+        sans-serif;
     margin: 0;
     padding: 0;
     text-align: left;
@@ -67,9 +76,9 @@ h3,
 h4,
 h5,
 h6 {
-	margin: 0 0 0.5rem 0;
+    margin: 0 0 0.5rem 0;
     color: rgb(var(--black));
-	line-height: 1.2;
+    line-height: 1.2;
 }
 h1 {
     font-size: 3.2em;
@@ -89,7 +98,7 @@ h5 {
 }
 strong,
 b {
-	font-weight: 700;
+    font-weight: 700;
 }
 a {
     color: rgb(var(--black));
@@ -101,20 +110,20 @@ a:focus-visible {
     text-decoration: underline;
 }
 p {
-	margin-bottom: 1em;
+    margin-bottom: 1em;
 }
 .prose p {
-	margin-bottom: 2em;
+    margin-bottom: 2em;
 }
 textarea {
-	width: 100%;
-	font-size: 16px;
+    width: 100%;
+    font-size: 16px;
 }
 input {
-	font-size: 16px;
+    font-size: 16px;
 }
 table {
-	width: 100%;
+    width: 100%;
 }
 img {
     max-width: 100%;
@@ -132,7 +141,7 @@ pre {
     border-radius: var(--border-radius);
 }
 pre > code {
-	all: unset;
+    all: unset;
 }
 blockquote {
     border-left: var(--border-thick) solid rgb(var(--black));
@@ -146,28 +155,28 @@ hr {
     border-top: var(--border-thick) solid rgb(var(--black));
 }
 @media (max-width: 720px) {
-	body {
-		font-size: 18px;
-	}
-	main {
-		padding: 1em;
-	}
+    body {
+        font-size: 18px;
+    }
+    main {
+        padding: 1em;
+    }
 }
 
 .sr-only {
-	border: 0;
-	padding: 0;
-	margin: 0;
-	position: absolute !important;
-	height: 1px;
-	width: 1px;
-	overflow: hidden;
-	/* IE6, IE7 - a 0 height clip, off to the bottom right of the visible 1px box */
-	clip: rect(1px 1px 1px 1px);
-	/* maybe deprecated but we need to support legacy browsers */
-	clip: rect(1px, 1px, 1px, 1px);
-	/* modern browsers, clip-path works inwards from each corner */
-	clip-path: inset(50%);
-	/* added line to stop words getting smushed together (as they go onto separate lines and some screen readers do not understand line feeds as a space */
-	white-space: nowrap;
+    border: 0;
+    padding: 0;
+    margin: 0;
+    position: absolute !important;
+    height: 1px;
+    width: 1px;
+    overflow: hidden;
+    /* IE6, IE7 - a 0 height clip, off to the bottom right of the visible 1px box */
+    clip: rect(1px 1px 1px 1px);
+    /* maybe deprecated but we need to support legacy browsers */
+    clip: rect(1px, 1px, 1px, 1px);
+    /* modern browsers, clip-path works inwards from each corner */
+    clip-path: inset(50%);
+    /* added line to stop words getting smushed together (as they go onto separate lines and some screen readers do not understand line feeds as a space */
+    white-space: nowrap;
 }
