--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -68,3 +68,7 @@ const { title, description, image = FallbackImage } = Astro.props;
 <meta property="twitter:title" content={title} />
 <meta property="twitter:description" content={description} />
 <meta property="twitter:image" content={new URL(image.src, Astro.url)} />
+
+<script is:inline src="/public/alpine.min.js" defer></script>
+
+<!-- <ClientRouter /> -->
