--- a/src/layouts/Base.astro
+++ b/src/layouts/Base.astro
@@ -12,15 +12,19 @@ const { title = SITE_TITLE, description = SITE_DESCRIPTION } = Astro.props;
 ---
 
 <!doctype html>
-<html lang="en">
+<html lang="en" transition:name="root" transition:animate="none">
     <head>
         <BaseHead title={title} description={description} />
     </head>
     <body>
         <nav class="minimal-nav">
-            <a href="/" transition:name="site-title">← Tim Willebrands</a>
+            <a href="/"
+                ><h1 transition:name="title" class="!text-2xl">
+                    ← Tim Willebrands
+                </h1></a
+            >
         </nav>
-        <main transition:animate="fade">
+        <main>
             <slot />
         </main>
     </body>
@@ -36,8 +40,6 @@ const { title = SITE_TITLE, description = SITE_DESCRIPTION } = Astro.props;
     .minimal-nav a {
         color: rgb(var(--black));
         text-decoration: none;
-        font-weight: 500;
-        font-size: 1.1em;
     }
 
     .minimal-nav a:hover {
