--- a/src/layouts/Minimal.astro
+++ b/src/layouts/Minimal.astro
@@ -11,7 +11,7 @@ const { title = SITE_TITLE, description = SITE_DESCRIPTION } = Astro.props;
 ---
 
 <!doctype html>
-<html lang="en">
+<html lang="en" transition:name="root" transition:animate="none">
     <head>
         <BaseHead title={title} description={description} />
     </head>
