--- a/src/pages/writing/[...slug].astro
+++ b/src/pages/writing/[...slug].astro
@@ -1,24 +1,22 @@
 ---
-import { type CollectionEntry, getCollection, render } from 'astro:content';
-import Base from '../../layouts/Base.astro';
+import { type CollectionEntry, getCollection, render } from "astro:content";
+import Base from "../../layouts/Base.astro";
 
 export async function getStaticPaths() {
-	const posts = await getCollection('blog');
-	return posts.map((post) => ({ params: { slug: post.id }, props: post }));
+    const posts = await getCollection("blog");
+    return posts.map((post) => ({ params: { slug: post.id }, props: post }));
 }
-type Props = CollectionEntry<'blog'>;
+type Props = CollectionEntry<"blog">;
 const post = Astro.props as Props;
 const { Content } = await render(post);
 ---
 
 <Base title={post.data.title} description={post.data.description}>
-	<article>
-		<h1 transition:name="title">{post.data.title}</h1>
-		<hr />
-		<div class="prose">
-			<Content />
-		</div>
-	</article>
+    <article>
+        <h1>{post.data.title}</h1>
+        <hr />
+        <div class="prose">
+            <Content />
+        </div>
+    </article>
 </Base>
-
-
