Less obnoxious typewriting

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -16,13 +16,13 @@ const featuredLinkClasses =
     >
         <div class="grow max-w-[30rem]">
             <h1 transition:name="title" class="mb-4 text-7xl text-center">
-                Tim Willebrands ⚙️
+                Tim Willebrands
             </h1>
             <h2 class="!text-3xl font-semibold text-center">
                 Builder of Maintainable Systems
             </h2>
             <h2 class="mb-4 !text-3xl font-semibold text-center">
-                Tech Lead & Architect
+                Product-focussed Tech Lead & Architect
             </h2>
             <p class="text-lg leading-[1.7]">
                 I design and ship robust, developer-friendly platforms. Minimal
