this is how that works

--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -34,14 +34,14 @@ const { title, description, image = FallbackImage } = Astro.props;
 <!-- Font preloads: Dosis -->
 <link
     rel="preload"
-    href="/fonts/Dosis-Regular.ttf"
+    href={new URL("/fonts/Dosis-Regular.ttf", Astro.site)}
     as="font"
     type="font/ttf"
     crossorigin
 />
 <link
     rel="preload"
-    href="/fonts/Dosis-Bold.ttf"
+    href={new URL("/fonts/Dosis-Bold.ttf", Astro.site)}
     as="font"
     type="font/ttf"
     crossorigin
@@ -57,18 +57,22 @@ const { title, description, image = FallbackImage } = Astro.props;
 
 <!-- Open Graph / Facebook -->
 <meta property="og:type" content="website" />
-<meta property="og:url" content={Astro.url} />
+<meta property="og:url" content={new URL(Astro.url.pathname, Astro.site)} />
 <meta property="og:title" content={title} />
 <meta property="og:description" content={description} />
-<meta property="og:image" content={new URL(image.src, Astro.url)} />
+<meta property="og:image" content={new URL(image.src, Astro.site)} />
 
 <!-- Twitter -->
 <meta property="twitter:card" content="summary_large_image" />
-<meta property="twitter:url" content={Astro.url} />
+<meta
+    property="twitter:url"
+    content={new URL(Astro.url.pathname, Astro.site)}
+/>
 <meta property="twitter:title" content={title} />
 <meta property="twitter:description" content={description} />
-<meta property="twitter:image" content={new URL(image.src, Astro.url)} />
+<meta property="twitter:image" content={new URL(image.src, Astro.site)} />
 
-<script is:inline src="/public/alpine.min.js" defer></script>
+<script is:inline src={new URL("/public/alpine.min.js", Astro.site)} defer
+></script>
 
 <!-- <ClientRouter /> -->
