--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -27,21 +27,21 @@ const { title, description, image = FallbackImage } = Astro.props;
     rel="alternate"
     type="application/rss+xml"
     title={SITE_TITLE}
-    href={new URL("rss.xml", Astro.site)}
+    href={new URL(import.meta.env.BASE_URL + "/rss.xml", Astro.site)}
 />
 <meta name="generator" content={Astro.generator} />
 
 <!-- Font preloads: Dosis -->
 <link
     rel="preload"
-    href={new URL("/fonts/Dosis-Regular.ttf", Astro.site)}
+    href={import.meta.env.BASE_URL + "/fonts/Dosis-Regular.ttf"}
     as="font"
     type="font/ttf"
     crossorigin
 />
 <link
     rel="preload"
-    href={new URL("/fonts/Dosis-Bold.ttf", Astro.site)}
+    href={import.meta.env.BASE_URL + "/fonts/Dosis-Bold.ttf"}
     as="font"
     type="font/ttf"
     crossorigin
@@ -57,22 +57,31 @@ const { title, description, image = FallbackImage } = Astro.props;
 
 <!-- Open Graph / Facebook -->
 <meta property="og:type" content="website" />
-<meta property="og:url" content={new URL(Astro.url.pathname, Astro.site)} />
+<meta
+    property="og:url"
+    content={new URL(import.meta.env.BASE_URL + Astro.url.pathname, Astro.site)}
+/>
 <meta property="og:title" content={title} />
 <meta property="og:description" content={description} />
-<meta property="og:image" content={new URL(image.src, Astro.site)} />
+<meta
+    property="og:image"
+    content={new URL(import.meta.env.BASE_URL + image.src, Astro.site)}
+/>
 
 <!-- Twitter -->
 <meta property="twitter:card" content="summary_large_image" />
 <meta
     property="twitter:url"
-    content={new URL(Astro.url.pathname, Astro.site)}
+    content={new URL(import.meta.env.BASE_URL + Astro.url.pathname, Astro.site)}
 />
 <meta property="twitter:title" content={title} />
 <meta property="twitter:description" content={description} />
-<meta property="twitter:image" content={new URL(image.src, Astro.site)} />
+<meta
+    property="twitter:image"
+    content={new URL(import.meta.env.BASE_URL + image.src, Astro.site)}
+/>
 
-<script is:inline src={new URL("/public/alpine.min.js", Astro.site)} defer
+<script is:inline src={import.meta.env.BASE_URL + "/public/alpine.min.js"} defer
 ></script>
 
 <!-- <ClientRouter /> -->
