Update homepage intro

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -27,15 +27,17 @@ const socialLinkClasses =
                 >
                     Tim Willebrands
                 </h1>
-                <h2 class="mb-3 text-xl leading-1 font-semibold md:text-lg">
+                <h3 class="mb-3 text-2xl leading-1 font-semibold md:text-lg">
                     Software Craftsman & Technical Leader
-                </h2>
+                </h3>
                 <p class="mx-auto max-w-xl text-xl leading-relaxed font-medium">
                     I'm a builder at heart, driven by the quiet joy of taking a
                     complex, messy problem and distilling it down to a clean,
                     maintainable solution. I do my best work with a high degree
                     of autonomy, taking full ownership of a product from the
                     initial spark of an idea to its life in production.
+                    Elevating the team's technical bar through mentorship in
+                    code and architecture.
                     <br /><br />
                     Whether it's code, a loaf of bread, or a game prototype with
                     friends, I believe in the craft of making things well. My goal
