Improve wording in the about me section

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -36,8 +36,8 @@ const socialLinkClasses =
                     maintainable solution. I do my best work with a high degree
                     of autonomy, taking full ownership of a product from the
                     initial spark of an idea to its life in production.
-                    Elevating the team's technical bar through mentorship in
-                    code and architecture.
+                    Elevating the team's technical bar through sharing the
+                    craft.
                     <br /><br />
                     Whether it's code, a loaf of bread, or a game prototype with
                     friends, I believe in the craft of making things well. My goal
